[project]
name = "saisyo"
version = "0.1.0"
description = ""
authors = [
    {name = "rinri",email = "rinrin19.sasami@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
